--- a/Weather Assignment/index.html
+++ b/Weather Assignment/index.html
@@ -35,7 +35,7 @@
         //         var key = 'e81f8707fca7fecb8e3d9523fadf6a17';
 
         //         $.ajax({
-        //             url: 'api.openweathermap.org/data/2.5/weather?q={London}&appid={e81f8707fca7fecb8e3d9523fadf6a17}',
+        //             url: 'api.openweathermap.org/data/2.5/weather?q={London}&appid={enterkey}',
         //             datatype: 'json',
         //             type: 'GET',
         //             data: { q: city, appid: key, units: 'metric' },
